@@ -84,7 +84,7 @@ IcePack::RegistryService::start(int argc, char* argv[])
     }
 
     _registry = auto_ptr<Registry>(new Registry(communicator()));
-    if(!_registry->start(nowarn))
+    if(!_registry->start(nowarn, false))
     {
 	return false;
     }
